# werkzeug

./: .pre-commit-config.yaml  setup.cfg  setup.py  werkzeug-import-rewrite.py
bench/: wzbench.py
examples/: cookieauth.py  httpbasicauth.py  manage-coolmagic.py  manage-i18nurls.py  manage-plnt.py  manage-shorty.py  manage-simplewiki.py  manage-webpylike.py  upload.py
examples/contrib/: securecookie.py  sessions.py
examples/coolmagic/: application.py  utils.py
examples/couchy/: application.py  models.py  utils.py  views.py
examples/cupoftee/: application.py  db.py  network.py  pages.py
examples/i18nurls/: application.py  urls.py  views.py
examples/partial/: complex_routing.py
examples/plnt/: database.py  sync.py  utils.py  views.py  webapp.py
examples/shortly/: shortly.py
examples/shorty/: application.py  models.py  utils.py  views.py
examples/simplewiki/: actions.py  application.py  database.py  specialpages.py  utils.py
examples/webpylike/: example.py  webpylike.py
src/werkzeug/: __init__.py  _compat.py  _internal.py  _reloader.py  datastructures.py  exceptions.py  filesystem.py  formparser.py  http.py  local.py  posixemulation.py  routing.py  security.py  serving.py  test.py  testapp.py  urls.py  useragents.py  utils.py  wsgi.py
tests/: conftest.py  test_compat.py  test_datastructures.py  test_debug.py  test_exceptions.py  test_formparser.py  test_http.py  test_internal.py  test_local.py  test_routing.py  test_security.py  test_serving.py  test_test.py  test_urls.py  test_utils.py  test_wrappers.py  test_wsgi.py
tests/contrib/: test_atom.py  (+3 more)
(+19 files in other folders)
