[metadata]
license_file = LICENSE.rst

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests
norecursedirs = tests/hypothesis
filterwarnings =
    ignore::requests.packages.urllib3.exceptions.InsecureRequestWarning
    ; warning about collections.abc fixed in watchdog master
    ignore::DeprecationWarning:watchdog.utils.bricks:175
    ; DeprecationWarnings from Werkzeug
    ignore:.* version 1\.0:DeprecationWarning
    ignore:The default 'Secure:UserWarning

[coverage:run]
branch = True
source =
    werkzeug
    tests

[coverage:paths]
source =
    src/werkzeug
    .tox/*/lib/python*/site-packages/werkzeug
    .tox/*/site-packages/werkzeug

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
# E203 = slice notation whitespace, invalid
# E501 = line length, handled by bugbear B950
# W503 = bin op line break, invalid
ignore = E203, E501, W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    src/werkzeug/wrappers/__init__.py: F401
